--- a/src/Settings.CodeGen/Settings.CodeGen.csproj
+++ b/src/Settings.CodeGen/Settings.CodeGen.csproj
@@ -4,6 +4,7 @@
     <TargetFramework>netstandard2.0</TargetFramework>
     <PackageId>Settings.CodeGen</PackageId>
     <Title>Settings.CodeGen</Title>
+    <PackageVersion>1.0.0</PackageVersion>
     <AssemblyName>Settings.CodeGen</AssemblyName>
     <Authors>VladislavRudakoff</Authors>
     <Description>Generates strongly-typed constants for appsettings.json configuration keys</Description>
@@ -22,18 +23,13 @@
     <DebugType>embedded</DebugType>
     <IsPackable>true</IsPackable>
     <CopyLocalLockFileAssemblies>true</CopyLocalLockFileAssemblies>
-    <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
-    <IncludeSymbols>true</IncludeSymbols>
-    <SymbolPackageFormat>snupkg</SymbolPackageFormat>
-    <RepositoryUrl>https://github.com/VladislavRudakoff/Settings.CodeGen.git</RepositoryUrl>
+    <RepositoryUrl>https://github.com/VladislavRudakoff/Settings.CodeGen</RepositoryUrl>
     <RepositoryType>git</RepositoryType>
   </PropertyGroup>
 
   <ItemGroup>
     <PackageReference Include="Microsoft.Build.Framework" Version="17.14.8" PrivateAssets="all" />
-    <PackageReference Include="Microsoft.Build.Utilities.Core" Version="17.14.8" PrivateAssets="all" ExcludeAssets="Runtime">
-      <IncludeAssets>compile; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
-    </PackageReference>
+    <PackageReference Include="Microsoft.Build.Utilities.Core" Version="17.14.8" PrivateAssets="all" ExcludeAssets="Runtime" />
     <PackageReference Include="System.Text.Json" Version="9.0.7" PrivateAssets="all" />
   </ItemGroup>
 
